# pydioc

./: LICENSE.txt  README.md  pyproject.toml  pytest.ini
pydioc/: ioccontainer.py  main.py  repository.py  rng.py
tests/: test_ioc.py
