[tool.poetry]
name = "pydioc"
version = "0.1.0"
description = "DI/IoC experiment in Python"
authors = ["dsqrt4 <44970945+dsqrt4@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
